# ector-supply-chain-scanner

./: Cargo.toml  README.md  README.md.backup  bacon.toml  npm-supply-chain-detector
.github/workflows/: general.yml  release.yml
attacks/: attacks.json  vercel-react-nextjs-2025.txt
script/: install.sh  uninstall.sh
src/: lib.rs  main.rs  scanner.rs
src/cli/: mod.rs
src/cli/commands/: add.rs  check.rs  (+2 more)
src/core/: checker.rs  mod.rs  package.rs  parser.rs  threat.rs
src/store/: local.rs  mod.rs
src/util/: json.rs
tests/: cli.rs
tests/snapshots/: cli__add_all_fields.snap  cli__add_event_stream_realistic.snap  cli__add_invalid_package.snap  cli__add_minimal_with_package.snap  cli__add_missing_required_fields.snap  cli__add_multiple_packages.snap  cli__add_multiple_payloads.snap  cli__add_multiple_signatures.snap  cli__add_multiple_workflows.snap  cli__add_scoped_packages.snap  cli__add_single_package.snap  cli__add_single_payload.snap  cli__add_single_signature.snap  cli__add_single_workflow.snap  cli__check_effect_npm_clean.snap  cli__check_effect_npm_core_threat.snap  cli__check_effect_npm_multiple_threats.snap  cli__check_effect_npm_platform_threat.snap  cli__check_effect_npm_typescript_threat.snap  cli__check_effect_yarn_clean.snap  cli__check_effect_yarn_platform_threat.snap  cli__check_no_threats_loaded.snap  cli__check_npm_vs_yarn_npm.snap  cli__check_npm_vs_yarn_yarn.snap  cli__check_payload_file_detection.snap  cli__help_add.snap  cli__help_check.snap  cli__help_list.snap  cli__help_main.snap  cli__list_empty.snap  cli__list_multiple_threats.snap
(+2 files in other folders)
