[package]
name = "ector"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = {version = "0.4.42", features = ["serde"]}
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
inquire = "0.9.1"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.1.1"
insta = "1.46.0"
predicates = "3.1.3"
proptest = "1.9.0"
regex = "1.12.2"
tempfile = "3.24.0"
